--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clarifai": "^2.9.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dropzone": "^14.2.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
